src/objects/Bundle__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bundles</relationshipLabel>
        <relationshipName>Bundles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Balance_Days__c</fullName>
        <formula>Total_Allocated_Days__c -  Total_Debited_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Day(s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_Chart__c</fullName>
        <formula>IF( 
Total_Allocated_Days__c &gt; 0, 
IMAGE(&quot;http://chart.apis.google.com/chart?cht=p3&amp;chd=t:&quot; &amp; 
Text(ROUND(Total_Debited_Days__c/Total_Allocated_Days__c,2)) &amp; &quot;,&quot; &amp; 
Text(ROUND(Balance_Days__c/Total_Allocated_Days__c,2)) &amp; 
&quot;&amp;chs=350x100&amp;chf=bg,s,FFFFFF&amp;chl=Completed&quot; &amp; 
&quot; (&quot; &amp; Text(ROUND(Total_Debited_Days__c/Total_Allocated_Days__c,2)*100) &amp; &quot;%)&quot; &amp; 
&quot;|Remaining&quot; &amp; 
&quot; (&quot; &amp; Text(ROUND(Balance_Days__c/Total_Allocated_Days__c,2)*100) &amp; &quot;%)&quot; &amp; 
&quot;&amp;chco=01FF11|5533ff&quot;, 
&quot;chart text&quot;), 
&quot;N/A&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed %</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <formula>IF(Total_Allocated_Days__c &gt; 0, ( Total_Debited_Days__c ) / Total_Allocated_Days__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Percetage_Slot__c</fullName>
        <formula>IF((Remaining__c * 100) &gt; 50 , Remaining__c * 100, 
IF((Remaining__c * 100) &lt;= 50 &amp;&amp; (Remaining__c * 100) &gt; 25, 50, 
IF((Remaining__c * 100) &lt;= 25 &amp;&amp; (Remaining__c * 100) &gt; 10, 25, 
IF((Remaining__c * 100) &lt;= 10 &amp;&amp; (Remaining__c * 100) &gt; 0, 10, 0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Percetage Slot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining__c</fullName>
        <formula>1 - Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Allocated_Days__c</fullName>
        <label>Total Allocated Day(s)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Debited_Days_F__c</fullName>
        <formula>-1* Total_Debited_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Debited Day(s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Debited_Days__c</fullName>
        <label>Total Debited Day(s)</label>
        <summarizedField>Bundle_Work__c.Time_Spent_in_Days__c</summarizedField>
        <summaryForeignKey>Bundle_Work__c.Bundle__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Remaining_Days__c</fullName>
        <formula>Total_Allocated_Days__c -  Total_Debited_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Remaining Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Teacher</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Supply Cover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bundle</label>
    <nameField>
        <label>Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DO_NOT_ALLOW_EDIT</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED(Total_Allocated_Days__c)</errorConditionFormula>
        <errorMessage>Can&apos;t edit bundle once it&apos;s created</errorMessage>
    </validationRules>
</CustomObject>